# ELEVENPLUS

./: .gitignore  README.md  main.py  pyproject.toml  pyproject_toml.txt  requirements.txt  setup.py  test.py  test_script.sh
api/: main.py
config/: config.yaml
configs/: vocab_prompts.py
model/: model.py
notebook/: test_func.py  test_function.ipynb
prompt/: prompt_library.py
src/: read_sample.py
src/application/: generate_vocabtest.py  ingest_words.py  test_db_mgr.py  test_generator.py  vocab_db_mgr.py  word_definition.py
static/: style.css  style_new.css
templates/: index.html  index_new.html
utils/: db_manager.py  model_loader.py  pdf_printer.py
