[project]
name = "elevenplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "counter>=1.0.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "reportlab>=4.4.4",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
